Update MongoDB URI in .env.appwrite

--- a/.env.appwrite
+++ b/.env.appwrite
@@ -1,4 +1,5 @@
 NODE_ENV=production
 PORT=3000
-MONGO_URI=votre_uri_mongodb_atlas
+mongodb+srv://efelixmagloire_db_user:SLiiYTBS0QdGRpf9@cluster0.qvot8bv.mongodb.net/
+
 ALLOWED_ORIGINS=*
