--- a/functions/deepseek-ai/src/package.json
+++ b/functions/deepseek-ai/src/package.json
@@ -1,8 +1,8 @@
 {
   "name": "deepseek-ai",
-  "version": "1.0.0",
+  "version": "4.0.0",
   "description": "AppWrite function for DeepSeek AI integration",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
